@@ -1,4 +1,4 @@
 DIST feed2imap-0.9.3.tgz 60504 RMD160 0cc7dfaa0ed5c04eabf26d74ddbc147a6fb04abe SHA1 12a9a4ab99c9c4e96d6dff75935dc79e7e5f6e19 SHA256 46fbdfa9287b41742fb0e7bd426ec5cd6bc01303f9eb73ab9f6ae8e672e86b4f
-EBUILD feed2imap-0.9.3.ebuild 613 RMD160 6fc0e5637e1f38a2a415e3cf98f8a5b1ffb0f9b8 SHA1 b07f571c1152e117f0d2f5882b97990ec6db90ca SHA256 1f9e0c60525cce4ad4c04fcf10fc1edeceb54fec32728e440560698b98bfeb8c
-MISC ChangeLog 281 RMD160 84e516268e110ce51876a8faba483c1561121ac5 SHA1 67ae3c42a8cdfe07de591520568d283b2b708206 SHA256 29fdf24723118df88fd2ccdf19a40d02b6968319f98d0c715e0d38bff8eb0d4a
+EBUILD feed2imap-0.9.3.ebuild 615 RMD160 94f87de52b09afc3f2ba7602148b439b73e14905 SHA1 75261f97103736b8994e5b03bfa956576e75660c SHA256 f0080aa62b02523292bb0f22a092f6868a54fd94b508c1abe887cdeff92270f7
+MISC ChangeLog 399 RMD160 66f2ca884254ad1bf71807cb2a2f6ed6a79f5c18 SHA1 370173c2d22ca2ddd54ecb156db602d77c0f21ab SHA256 2beee58008f58f703703e50cec860dd96ea306038512af98ccd294c0f4174770
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
