@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/feed2imap
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  12 Jul 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  feed2imap-0.9.3.ebuild:
+  Whitespace, add die statement
 
   24 Nov 2008; Sergio D. Rodriguez Inclan (ZeRoX) <srinclan@gmail.com>
   +feed2imap-0.9.3.ebuild, +metadata.xml:
